# popstore

./: #.DS_Store#  PA07.29.19.xlsx
.netlify/: state.json
popstore/: .gicd.swp  .gitignore  pyproject.toml
popstore/popstore/: manage.py
popstore/popstore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
popstore/popstore/api/: .#views.py  email_utility.py  models.py  serializers.py  urls.py  views.py
popstore/popstore/api/migrations/: 0001_initial.py  0002_auto_20190708_2039.py
popstore/popstore/popstore/: secret_key.py  settings.py  urls.py  wsgi.py
popstore/tests/: test_popstore.py
webstore/: .env  .env.development  .gitignore  napkin  package-lock.json  package.json
webstore/public/: index.html
webstore/src/: App.tsx  MyStoreCheckout.tsx  OrderForm.tsx  index.tsx  scratch
webstore/src/components/checkout/: CheckoutForm.tsx  formSchemas.tsx  types.tsx
webstore/src/components/exits/: ErrorPage.tsx  Valediction.tsx
webstore/src/components/main/: App.tsx  Balance.tsx  BalanceContainer.tsx  HeaderContainer.tsx  LogoContainer.tsx  Navigation.tsx  Navigation.tsx~  SubmitAnim.tsx  UserAlert.tsx  styles.tsx  types.tsx
webstore/src/constants/: constants.tsx  oldConstants.tsx  types.tsx
webstore/src/redux/: actionTypes.tsx  stateDefaults.tsx  stateDefaults.tsx~
webstore/src/springs/: MenuPanelSpring.tsx  orderSpring.tsx  orderSprings.tsx  types.tsx
webstore/src/store/: store.tsx
webstore/src/utilities/: SVGResizers.tsx  buttonViewBox.tsx  convertPopCountToCharge.tsx  popConverter.tsx  rootURLS.tsx  svgResizer.tsx  types.tsx
(+53 files in other folders)
