[tool.poetry]
name = "popstore"
version = "0.1.0"
description = ""
authors = ["MTempleman <huntertempleman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-cors-headers = "^3.0"
pycountry = "^18.12"
djangorestframework = "^3.9"
braintree = "^3.55"
stripe = "^2.32"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
